<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="---------------单独测试------------------"
        android:textColor="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startPhoto"
        android:text="@string/app_ocr_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFace"
        android:text="@string/app_face_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-----------------汇总测试------------------"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="是否开启人脸识别"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/et_face"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="是否开启ocr认证"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/et_ocr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startAllRe"
        android:text="@string/app_face_card_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startAll"
        android:text="@string/app_face_card_sdk_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startAllView"
        android:text="@string/app_face_card_view" />


</LinearLayout>